--- a/Proyectos/Dataviz Challenge/notebooks/DataAnalysis.ipynb
+++ b/Proyectos/Dataviz Challenge/notebooks/DataAnalysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dataviz Challenge 2021\n",
+    "# Dataviz Challenge Future Lab 2021\n",
     "\n",
     "## Interpretación\n",
     "Las medias y totales mensuales son en base a los datos disponibles, cuando en las medias aparece algún resultado en rojo, significa que no se dispone de información del mes completo, en este caso, la media o total es de los días de los que existen datos.\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -772,17 +772,16 @@
        "29   NaN  NaN NaN  NaN NaN    20.66   -103.38  Guadalajara  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Importar pandas\n",
     "import pandas as pd\n",
     "\n",
     "# Cargar el archivo CSV en un DataFrame\n",
-    "datos = pd.read_csv('datos.csv')\n",
+    "datos = pd.read_csv('../data/datos.csv')\n",
     "datos"
    ]
   },
@@ -795,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1189,7 @@
        "29  6/30/2021  21.6  28.8  18.5  1009.4  66.0    20.66   -103.38  Guadalajara"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,12 +1227,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Guardar el DataFrame actualizado en un nuevo archivo CSV\n",
-    "datos.to_csv('DatosClimaticos.csv', index=False)"
+    "datos.to_csv('../data/DatosClimaticos.csv', index=False)"
    ]
   }
  ],
